added db config

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,windows,linux,go
+
+db/.data/*
+!db/.data/.gitkeep
