--- a/docker-compose.db.yaml
+++ b/docker-compose.db.yaml
@@ -3,12 +3,12 @@ version: "3"
 services:
   db:
     image: mysql:8.0
-    container_name: local_db
+    container_name: db
     environment:
       MYSQL_USER: docker
       MYSQL_ROOT_PASSWORD: root
       MYSQL_PASSWORD: docker
-      MYSQL_DATABASE: cateiru
+      MYSQL_DATABASE: earthquake-alert
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
