--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Run MySQL Server
+      run: ./scripts/docker-compose-db.sh up -d
+
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: ./scripts/test.sh
