テーブル名修正

--- a/db/sqlboiler.toml
+++ b/db/sqlboiler.toml
@@ -9,7 +9,7 @@
     "JmaXmlEntries",
     "TwitterThreads",
     "Earthquakes",
-    "Tsunamis",
+    "TsunamiConnects",
     "TsunamiInfos",
     "EarthquakeInfos",
     "EarthquakeEpicenters",
