スキーマ追加

--- a/db/sqlboiler.toml
+++ b/db/sqlboiler.toml
@@ -17,4 +17,7 @@
     "EarthquakeActivity",
     "EarthquakeUpdate",
     "EarthquakeCount",
+    "Prefectures",
+    "Areas",
+    "IntensityStations"
   ]
