スキーマ修正

--- a/db/sqlboiler.toml
+++ b/db/sqlboiler.toml
@@ -17,7 +17,7 @@
     "EarthquakeActivity",
     "EarthquakeUpdate",
     "EarthquakeCount",
-    "Prefectures",
-    "Areas",
-    "IntensityStations"
+    "PrefectureCodes",
+    "AreaCodes",
+    "IntensityStationCodes"
   ]
